--- a/README
+++ b/README
@@ -13,8 +13,8 @@ git --version
 sudo apt-get update
 sudo apt-get install git
 
-git config --global user.name"jueshidunai"
-git config --global user.email"jueshidunai@gmail.com"
+git config --global user.name""
+git config --global user.email""
 git config --list
 
 git init Myshua
